# used-car-tracker

./: LICENSE  README.md  pyproject.toml
service/: car-tracker.service  car-tracker.timer
static/: index.html
used_car_tracker/: __main__.py  tracker.py
used_car_tracker/server/: __main__.py  server.py
