[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "used-car-tracker"
version = "0.0.1"
# DO NOT UPGRADE! PI CANT RUN 3.9
requires-python = ">=3.7"
dependencies = [
    "httpx"
]

# install with `pip install .[dev]`
[project.optional-dependencies]
dev = [
    "isort",
    "black",
    "mypy",
    "pytest",
    "autoflake"
]

[tool.setuptools.packages]
find = {}